--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,29 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				
+				<configuration>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>4.4.0</muleVersion>
+						<username>vamsi2430</username>
+						<password>Vamsi@9110352363</password>
+						<applicationName>jksapplication2430</applicationName>
+						<environment>Sandbox</environment>
+						<region>us-east-2</region>
+						<workers>1</workers>
+						<workerType>MICRO</workerType>
+						<properties>
+							<key>value</key>
+						</properties>
+					</cloudHubDeployment>
+				</configuration>
+				
+				
+				
+				
+				
+				
 			</plugin>
 		</plugins>
 	</build>
